@@ -2075,7 +2075,7 @@
 (#t (real? 3))
 (#f (real? (make-complex t3.1 t0.0)))
 (#t (real? (make-complex t3.1 0)))
-(#t (real? (t-3.1)))
+(#t (real? t-3.1))
 (#t (rational? (/ 6 10)))
 (#t (rational? (/ 6 3)))
 (#t (rational? 2))
@@ -2090,7 +2090,24 @@
 (#t (real? minus-inf))
 (#f (rational? minus-inf))
 (#f (integer? minus-inf))
-
+(#t (real-valued? my-nan))
+(#t (real-valued? (make-complex my-nan 0)))
+(#t (real-valued? minus-inf))
+(#t (real-valued? 3))
+(#t (real-valued? (make-complex t3.1 t0.0)))
+(#t (real-valued? (make-complex t3.1 0)))
+(#t (real-valued? t-3.1))
+(#f (rational-valued? my-nan))
+(#f (rational-valued? minus-inf))
+(#t (rational-valued? (/ 6 10)))
+(#t (rational-valued? (make-complex (/ 6 10) t0.0)))
+(#t (rational-valued? (make-complex (/ 6 10) t0.0)))
+(#t (rational-valued? (/ 6 3)))
+(#t (integer-valued? (make-complex 3 0)))
+(#t (integer-valued? (make-complex 3 t0.0)))
+(#t (integer-valued? t3.0))
+(#t (integer-valued? (make-complex t3.0 t0.0)))
+(#t (integer-valued? (/ 8 4)))
 
 
 ;; optimize miss
